--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </div>
         <div class="portfolio-content">
             <div class="row">
-                <img src="img/project1.jpg" >
+                <img src="project1.jpg" >
                 <div class="layer">
                     <h5>Visual Design</h5>
                     <p>Check out 10 best Design's updates for the top web design & development compaines.</p>
@@ -213,7 +213,7 @@
             </div>
     
             <div class="row">
-                <img src="img/project2.jpg" >
+                <img src="project2.jpg" >
                 <div class="layer">
                     <h5>Visual Design</h5>
                     <p>Check out 10 best Design's updates for the top web design & development compaines.</p>
@@ -222,7 +222,7 @@
             </div>
     
             <div class="row">
-                <img src="img/project3.jpg" >
+                <img src="project3.jpg" >
                 <div class="layer">
                     <h5>Visual Design</h5>
                     <p>Check out 10 best Design's updates for the top web design & development compaines.</p>
