--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         
         <div class="timeline-content">
             <h3>Master</h3>
-            <p>Purshing Master Of Computer Application(MCA) From Brainware University</p>
+            <p>Purshing Master Of Computer Application From Brainware University</p>
         </div>
     </div>
     </div>
