--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
             <h1>Education</h1>
             <div class="eddu1">
             <div class="education-item">
-                <h2>University Name</h2>
-                <p><strong>Degree:</strong> Bachelor of Science in Computer Science</p>
-                <p><strong>Years:</strong> 2015 - 2019</p>
+                <h2>Brainware University, Kolkata Barasat</h2>
+                <p><strong>PG:</strong>Mastrer Of Computer Application</p>
+                <p><strong>Years:</strong> 2022 - 2024</p>
             </div>
             <div class="education-item">
-                <h2>High School Name</h2>
-                <p><strong>Diploma:</strong> High School Diploma</p>
-                <p><strong>Years:</strong> 2011 - 2015</p>
+                <h2>Indra Gandhi National Open University</h2>
+                <p><strong>UG:</strong> Bachelor Of Computer Application </p>
+                <p><strong>Years:</strong> 2018 - 2021</p>
             </div>
             <div class="education-item">
-                <h2>High School Name</h2>
-                <p><strong>Diploma:</strong> High School Diploma</p>
-                <p><strong>Years:</strong> 2011 - 2015</p>
+                <h2>Bihar School Examination Board</h2>
+                <p><strong>12lth:</strong> Bihar School Examination Board </p>
+                <p><strong>Years:</strong> 2016 - 2018</p>
             </div>
             <div class="education-item">
-                <h2>High School Name</h2>
-                <p><strong>Diploma:</strong> High School Diploma</p>
-                <p><strong>Years:</strong> 2011 - 2015</p>
+                <h2>Bihar School Examination Board</h2>
+                <p><strong>10th:</strong> Bihar School Examination Board </p>
+                <p><strong>Years:</strong> 2016</p>
             </div>
         </div>
     </div>
