--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                     <div class="btn-group">
                         <a href="mk.pdf" class="btn active" download>Download CV</a>
-                        <a href="#contact" class="btn">Contact</a>
+                        <a href="#contact" class="btn">Hire Me</a>
                      </div>
 
                     <div class="social">
@@ -215,7 +215,7 @@
     </section>
     <div class="containerr" id="contact">
         <form action="https://api.web3forms.com/submit" method="POST" class="ff">
-            <h2>Contact Me</h2>
+            <h2>Hire Me</h2>
             <input type="hidden" name="access_key" value="64eb0406-510b-4a48-a9d5-4c523bf2dfa4">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
