--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </p>
 
                     <div class="btn-group">
-                        <a href="mk.pdf" class="btn active" download>Download CV</a>
+                        <a href="Manu Kumar Cv.pdf" class="btn active" download>Download CV</a>
                         <a href="#contact" class="btn">Hire Me</a>
                      </div>
 
